--- a/locationkitdemo/pubspec.yaml
+++ b/locationkitdemo/pubspec.yaml
@@ -30,13 +30,10 @@ dependencies:
   cupertino_icons: ^0.1.3
 
   getwidget: ^1.1.0
+  auto_size_text: ^2.1.0
 
-  # you downland kit on zip.
   huawei_location:
-    path: <enter your huawei location path>
-
-  # Or Use this package as a library.
-  huawei_location: ^4.0.4+300
+    path: ../../huawei_location
 
 dev_dependencies:
   flutter_test:
